# fest

./: .drone.yml  .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  meson.build
res/: fest.gresource.xml  main_window.glade
res/gtk/: help-overlay-old.ui  help-overlay.ui  menus.ui
res/icons/hicolor/: icons.gresource.xml  render-symbolic.py
src/: app.rs  bg_thread.rs  main.rs  matrix_client.rs  meson.build  util.rs
src/app/: launch.rs  mod.rs
src/matrix_client/: mod.rs  reqwest_ext.rs
