[package]
name = "fest"
authors = ["Jonas Platte <mail@jonasplatte.de>"]
license = "GPL-3.0+"
version = "0.1.0"
repository = "https://github.com/fest-im/fest"
build = "build/build.rs"

[dependencies]
chrono = "0.4.2"
fern = "0.5.5"
futures-await = "0.1.1"
gio = "0.4.0"
glib = "0.5.0"
hyper = "0.11.24"
hyper-tls = "0.1.3"
log = "0.4.1"
tokio-core = "0.1.17"
url = "1.7.0"

[dependencies.gtk]
features = ["v3_16"]
version = "0.4.0"

[dependencies.ruma-client]
git = "https://github.com/jplatte/ruma-client.git"
branch = "synapse-workarounds"

[dependencies.ruma-events]
git = "https://github.com/jplatte/ruma-events"
branch = "synapse-workarounds"

[dependencies.ruma-identifiers]
git = "https://github.com/jplatte/ruma-identifiers.git"
branch = "synapse-workarounds"

[features]
default = ["logging_color"]
logging_color = ["fern/colored"]
